--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
-	font: 'Raleway', sans-serif;
+	font: 'Raleway', sans-serif;;
     color: rgba(0,0,0,.5);
     text-align: center;
     text-transform: uppercase;
     letter-spacing: .5em;
     top: 15%;
-	background: linear-gradient(to right, red , yellow); /* Standard syntax */
+	background: linear-gradient(to right, red, yellow); /* Standard syntax */
+    /*background: linear-gradient(to right, (64, 191, 77), (67, 134, 188));*/
 }
 
 h1 {
